{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 413,
  "lineage": "47240144-d432-5748-a0d2-4d04bc19658b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.10",
            "association_id": "eipassoc-0ae68cf9ded809e05",
            "domain": "vpc",
            "id": "eipalloc-0ae75700424899bc1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0abfcfc708feada5b",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-211-11-131.compute-1.amazonaws.com",
            "public_ip": "18.211.11.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.20",
            "association_id": "eipassoc-0c790051735209b11",
            "domain": "vpc",
            "id": "eipalloc-05e304e4467152010",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f93d1e8abf8bd77",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_ip": "10.0.0.20",
            "public_dns": "ec2-54-91-164-148.compute-1.amazonaws.com",
            "public_ip": "54.91.164.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.web-server-nic2",
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:326297352973:instance/i-00a5b8954f1185cff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a5b8954f1185cff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-joey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0abfcfc708feada5b"
              }
            ],
            "primary_network_interface_id": "eni-0abfcfc708feada5b",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_ip": "18.211.11.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073ea28cc595a21f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0283cb49511a3f9fb",
            "tags": {
              "Name": "joey_terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4ca7c6561b5c386"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:326297352973:instance/i-0a168ba19647c62f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a168ba19647c62f3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-joey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04f93d1e8abf8bd77"
              }
            ],
            "primary_network_interface_id": "eni-04f93d1e8abf8bd77",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_ip": "10.0.0.20",
            "public_ip": "54.91.164.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f259ff38244be82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0283cb49511a3f9fb",
            "tags": {
              "Name": "joey_terraform2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4ca7c6561b5c386"
            ]
          },
          "dependencies": [
            "aws_instance.web_server_instance",
            "aws_network_interface.web-server-nic",
            "aws_network_interface.web-server-nic2",
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc",
            "time_sleep.wait_3_mins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326297352973:internet-gateway/igw-0e67d5e7989116b70",
            "id": "igw-0e67d5e7989116b70",
            "owner_id": "326297352973",
            "vpc_id": "vpc-014693aebb2a40dab"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0abfcfc708feada5b",
            "ipv6_address_count": 0,
            "mac_address": "0e:ce:6e:60:28:8d",
            "private_ip": "10.0.0.10",
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c4ca7c6561b5c386"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0283cb49511a3f9fb"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-04f93d1e8abf8bd77",
            "ipv6_address_count": 0,
            "mac_address": "0e:d2:52:52:64:a3",
            "private_ip": "10.0.0.20",
            "private_ips": [
              "10.0.0.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c4ca7c6561b5c386"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0283cb49511a3f9fb"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "joey_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4f0dfdc2b58e203",
            "owner_id": "326297352973",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e67d5e7989116b70",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e67d5e7989116b70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "joey_int"
            },
            "vpc_id": "vpc-014693aebb2a40dab"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0762a133aef52dd55",
            "route_table_id": "rtb-0f4f0dfdc2b58e203",
            "subnet_id": "subnet-0283cb49511a3f9fb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.joey_rt",
            "aws_subnet.joey_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326297352973:security-group/sg-0c4ca7c6561b5c386",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All networks allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4ca7c6561b5c386",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "326297352973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "joey-2020"
            },
            "timeouts": null,
            "vpc_id": "vpc-014693aebb2a40dab"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "joey_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326297352973:subnet/subnet-0283cb49511a3f9fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0283cb49511a3f9fb",
            "map_public_ip_on_launch": false,
            "owner_id": "326297352973",
            "tags": {
              "Name": "my_subnet-01"
            },
            "vpc_id": "vpc-014693aebb2a40dab"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326297352973:vpc/vpc-014693aebb2a40dab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df7e543993c91176",
            "default_route_table_id": "rtb-0369fe1a0f5bdea36",
            "default_security_group_id": "sg-05ed069a336aad790",
            "dhcp_options_id": "dopt-67d99b1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014693aebb2a40dab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0369fe1a0f5bdea36",
            "owner_id": "326297352973",
            "tags": {
              "Name": "first_vpc"
            }
          }
        }
      ]
    }
  ]
}